--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -126,6 +126,12 @@
                             {{'NAVIGATION_MENU.USERS'|translate}}
                         </a>
                     </li>
+                    <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
+                        <a ui-sref="role" ng-click="closeNav()">
+                            <span class="fa fa-address-card-o" aria-hidden="true"></span>
+                            {{'NAVIGATION_MENU.ROLES'|translate}}
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li class="dropdown" ng-class="{active: currentActiveProfile()}">
