--- a/templates/role/roles.html
+++ b/templates/role/roles.html
@@ -12,11 +12,11 @@
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-9 title-content">
                             <span class="fa fa-pie-chart"></span>
-                            <h1><strong>{{'STUDY.LIST.TITLE'|translate}}</strong></h1>
+                            <h1><strong>{{'ROLE.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-3 title-breadcrumbs">
-                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'STUDY.LIST.TITLE'|translate}}</strong></span>
+                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'ROLE.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
                     <div class="row clearfix operations">
@@ -24,13 +24,13 @@
                             <!-- Add button -->
                             <a style="margin-right:20px;" href="" ng-click="goToAddStudy()" class="btn btn-md btn-outline item-button">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-plus"></span>
-                                <span style="font-size: 20px;"><strong>{{'STUDY.LIST.ADD'|translate}}</strong></span>
+                                <span style="font-size: 20px;"><strong>{{'ROLE.LIST.ADD'|translate}}</strong></span>
                             </a>
                         </div>
                         <!-- Search field -->
                         <div class="search col-xs-12 col-sm-6 col-md-4">
                             <div class="form-group has-feedback" style="margin-bottom: 0">
-                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterStudy(filterValue)" placeholder="{{'STUDY.LIST.SEARCH'|translate}}">
+                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterStudy(filterValue)" placeholder="{{'ROLE.LIST.SEARCH'|translate}}">
                                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
