OPAL-261 - Finished coding roles list.

--- a/templates/role/roles.html
+++ b/templates/role/roles.html
@@ -11,7 +11,7 @@
                     <div class="row main-title">
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-9 title-content">
-                            <span class="fa fa-pie-chart"></span>
+                            <span class="fa fa-address-card-o"></span>
                             <h1><strong>{{'ROLE.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
@@ -22,7 +22,7 @@
                     <div class="row clearfix operations">
                         <div class="save-add col-xs-12 col-sm-6 col-md-8">
                             <!-- Add button -->
-                            <a style="margin-right:20px;" href="" ng-click="goToAddStudy()" class="btn btn-md btn-outline item-button">
+                            <a style="margin-right:20px;" href="" ng-click="goToAddRole()" class="btn btn-md btn-outline item-button">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-plus"></span>
                                 <span style="font-size: 20px;"><strong>{{'ROLE.LIST.ADD'|translate}}</strong></span>
                             </a>
@@ -30,7 +30,7 @@
                         <!-- Search field -->
                         <div class="search col-xs-12 col-sm-6 col-md-4">
                             <div class="form-group has-feedback" style="margin-bottom: 0">
-                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterStudy(filterValue)" placeholder="{{'ROLE.LIST.SEARCH'|translate}}">
+                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterRole(filterValue)" placeholder="{{'ROLE.LIST.SEARCH'|translate}}">
                                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
