OPAL-385 - Made the hospital map module dynamic according the role of the user. Deactivated the QR code usage since it's not in use and not working.

--- a/templates/alias/view.alias.html
+++ b/templates/alias/view.alias.html
@@ -2,8 +2,7 @@
 <div class="modal-header">
     <div class="col-xs-12 col-md-6">
         <h2 class="modal-title">
-            <span ng-if="writeAccess" class="glyphicon glyphicon-pencil"></span>
-            <span ng-if="!writeAccess" class="fa fa-eye"></span>
+            <span class="fa fa-eye"></span>
             {{'ALIAS.EDIT.TITLE_VIEW'|translate}} - {{alias.type_display}}
         </h2>
     </div>
