OPAL-385 - Made notification and test results modules dynamics according the role of the user

--- a/templates/hospital-map/view.hospital-map.html
+++ b/templates/hospital-map/view.hospital-map.html
@@ -2,7 +2,7 @@
 <div class="modal-header">
     <div class="col-xs-12 col-md-6">
         <h2 class="modal-title">
-            <span class="glyphicon glyphicon-pencil"></span>
+            <span class="fa fa-eye"></span>
             {{'HOSPITAL_MAPS.EDIT.TITLE_VIEW'|translate}}
         </h2>
     </div>
@@ -20,21 +20,14 @@
                 </div>
             </uib-accordion-heading>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6" style="margin-bottom: 10px;">
-                    <div class="input-group">
-                        <span class="input-group-addon">{{'HOSPITAL_MAPS.EDIT.ENGLISH_ABRV'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="hosMap.name_EN" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.ENGLISH_TITLE'|translate}}" required="required">
-                    </div>
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <p><strong>{{'HOSPITAL_MAPS.EDIT.ENGLISH_ABRV'|translate}}</strong>: {{hosMap.name_EN}}</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon">{{'HOSPITAL_MAPS.EDIT.FRENCH_ABRV'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="hosMap.name_FR" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.FRENCH_TITLE'|translate}}" required="required">
-                    </div>
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <p><strong>{{'HOSPITAL_MAPS.EDIT.FRENCH_ABRV'|translate}}</strong>: {{hosMap.name_FR}}</p>
                 </div>
             </div>
         </div>
-
         <!-- SECTION: Description -->
         <div uib-accordion-group is-open="descriptionSection.open">
             <uib-accordion-heading>
@@ -43,21 +36,18 @@
                 </div>
             </uib-accordion-heading>
             <div class="row">
+
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <span style="font-size:20px;">{{'HOSPITAL_MAPS.EDIT.ENGLISH_HTML'|translate}}</span>
                     <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">{{'HOSPITAL_MAPS.EDIT.ENGLISH_HTML'|translate}}</span>
                     </div>
-                    <div class="form-group">
-                        <div text-angular ng-model="hosMap.description_EN" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.ENGLISH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar"></div>
-                    </div>
+                    <div ng-bind-html="hosMap.description_EN"></div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <span style="font-size:20px;">{{'HOSPITAL_MAPS.EDIT.FRENCH_HTML'|translate}}</span>
                     <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">{{'HOSPITAL_MAPS.EDIT.FRENCH_HTML'|translate}}</span>
                     </div>
-                    <div class="form-group">
-                        <div text-angular ng-model="hosMap.description_FR" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.FRENCH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar"></div>
-                    </div>
+                    <div ng-bind-html="hosMap.description_FR"></div>
                 </div>
             </div>
         </div>
@@ -69,36 +59,18 @@
                     <strong>{{'HOSPITAL_MAPS.EDIT.MAP_URLS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': urlSection.open, 'glyphicon-chevron-right': !urlSection.open}"></i>
                 </div>
             </uib-accordion-heading>
-            <div class="alert alert-info" role="alert">
-                <strong>{{'HOSPITAL_MAPS.EDIT.MAP_URL'|translate}}</strong><br>
-                <p>
-                    <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                    <span><strong>{{'HOSPITAL_MAPS.EDIT.ENGLISH_ABRV'|translate}}</strong> -- {{hosMap.url_EN}}</span>
-                    <br>
-                    <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                    <span><strong>{{'HOSPITAL_MAPS.EDIT.FRENCH_ABRV'|translate}}</strong> -- {{hosMap.url_FR}}</span>
-                </p>
-            </div>
             <div class="row">
                 <div class="col-xs-12 col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon">{{'HOSPITAL_MAPS.EDIT.ENGLISH_ABRV'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="hosMap.url_EN" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.ENGLISH_MAP_URL'|translate}}" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" ng-click="showMap(hosMap.url_EN, 'EN')">{{'HOSPITAL_MAPS.EDIT.SHOW_MAP'|translate}}</button>
-                        </span>
+                    <div class="input-group"  style="margin-bottom: 10px;">
+                        <p><strong>{{'HOSPITAL_MAPS.EDIT.ENGLISH_ABRV'|translate}}</strong>: {{hosMap.url_EN}}</p>
                     </div>
                     <div ng-show="hosMap.url_EN" style="text-align:center">
                         <img ng-src="{{mapURL_EN}}" style="width:200px;height:200px;">
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon">{{'HOSPITAL_MAPS.EDIT.FRENCH_ABRV'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="hosMap.url_FR" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.FRENCH_MAP_URL'|translate}}" required="required">
-                        <span class="input-group-btn">
-              <button class="btn btn-default" type="button" ng-click="showMap(hosMap.url_FR, 'FR')">{{'HOSPITAL_MAPS.EDIT.SHOW_MAP'|translate}}</button>
-            </span>
+                    <div class="input-group"  style="margin-bottom: 10px;">
+                        <p><strong>{{'HOSPITAL_MAPS.EDIT.FRENCH_ABRV'|translate}}</strong>: {{hosMap.url_FR}}</p>
                     </div>
                     <div ng-show="hosMap.url_FR" style="text-align:center">
                         <img ng-src="{{mapURL_FR}}" style="width:200px;height:200px;">
