--- a/templates/questionnaire/view.questionnaire.html
+++ b/templates/questionnaire/view.questionnaire.html
@@ -1,23 +1,14 @@
 <!-- Modal title -->
 <div class="modal-header">
-    <h2 class="modal-title col-xs-12" ng-if="questionnaire.readOnly == '0'">
-        <span class="glyphicon glyphicon-pencil"></span>
-        {{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.TITLE'|translate}}
-    </h2>
-    <div class="row col-xs-12" ng-if="questionnaire.readOnly == 1">
+    <div class="row col-xs-12">
         <h2 class="modal-title col-xs-12">
-            <span class="text-danger fa fa-lock"></span>
+            <span class="fa fa-eye"></span>
             {{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.VIEW'|translate}}
         </h2>
-        <p class="text-danger">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.PUBLISHED'|translate}}</p>
+        <p class="text-danger" ng-if="questionnaire.readOnly == 1">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.PUBLISHED'|translate}}</p>
     </div>
     <div class="modal-buttons col-xs-12">
-        <span>
-            <form method="post" ng-submit="updateQuestionnaire()">
-                <input ng-if="questionnaire.readOnly == 0" class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.SAVE'|translate}}">
-                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.CANCEL'|translate}}">
-            </form>
-        </span>
+        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.CLOSE'|translate}}">
     </div>
 </div>
 <div class="modal-body">
@@ -31,26 +22,19 @@
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div class="input-group">
-                        <span class="input-group-addon">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.ENGLISH_TITLE'|translate}}</span>
-                        <textarea class="form-control" rows="1" ng-model="questionnaire.title_EN" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.PLACEHOLDER_ENGLISH_TITLE'|translate}}" ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></textarea>
-                    </div>
+                    <p><strong>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.ENGLISH_TITLE'|translate}}</strong>: {{questionnaire.title_EN}}</p>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div class="input-group">
-                        <span class="input-group-addon">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.FRENCH_TITLE'|translate}}</span>
-                        <textarea class="form-control" rows="1" ng-model="questionnaire.title_FR" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.PLACEHOLDER_FRENCH_TITLE'|translate}}" ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></textarea>
-                    </div>
+                    <p><strong>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.FRENCH_TITLE'|translate}}</strong>: {{questionnaire.title_FR}}</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
                 </div>
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
-                    <label style="font-size: 20px;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.FINALIZE'|translate}} <input ng-change="setChangesMade()" type="checkbox" ng-true-value="1" ng-false-value="0" ng-model="questionnaire.final" ng-disabled="questionnaire.readOnly"></label>
+                    <label style="font-size: 20px;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.FINALIZE'|translate}} <input type="checkbox" ng-true-value="1" ng-false-value="0" ng-model="questionnaire.final" disabled></label>
                 </div>
             </div>
-
         </div>
         <!-- SECTION: Description -->
         <div uib-accordion-group is-open="descriptionSection.open">
@@ -59,25 +43,7 @@
                     <strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
                 </div>
             </uib-accordion-heading>
-            <div class="row" ng-hide="questionnaire.readOnly || questionnaire.final">
-                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.HTML_ENGLISH'|translate}}</span>
-                    </div>
-                    <div class="input-group">
-                        <div text-angular ng-model="questionnaire.description_EN" ng-change="setChangesMade()" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.PLACEHOLDER_ENGLISH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar"  ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.HTML_FRENCH'|translate}}</span>
-                    </div>
-                    <div class="input-group">
-                        <div text-angular ng-model="questionnaire.description_FR" ng-change="setChangesMade()" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.PLACEHOLDER_FRENCH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar" ></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row" ng-show="questionnaire.readOnly || questionnaire.final">
+            <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div style="text-align:center; margin-bottom: 10px;">
                         <span style="font-size:20px;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.HTML_ENGLISH'|translate}}</span>
@@ -101,8 +67,7 @@
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-3">
-                    <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hoverB, active: questionnaire.private == 1, disabled : questionnaire.readOnly || questionnaire.final, animated : !questionnaire.readOnly && !questionnaire.final}"
-                         ng-click="privacyUpdate(1)" ng-mouseenter="hoverB=true" ng-mouseleave="hoverB=false">
+                    <div class="panel-container animated disabled" style="cursor:pointer;" ng-class="{active: questionnaire.private == 1}" ng-mouseenter="hoverB=true" ng-mouseleave="hoverB=false">
                         <div class="panel-info" ng-class="{active: questionnaire.private == 1}">
                             <div class="panel-content" style="text-align:center">
                                 <span style="font-size:30px;" class="fa fa-user-secret"></span>
@@ -112,8 +77,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
-                    <div id="btn-public" class="panel-container" style="cursor:pointer;" ng-class="{pulse: hoverC, active: questionnaire.private == 0, disabled : anyPrivate || questionnaire.readOnly || questionnaire.final, animated : !anyPrivate && !questionnaire.readOnly && !questionnaire.final}"
-                         ng-click="privacyUpdate(0)" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false">
+                    <div id="btn-public" class="panel-container disabled" style="cursor:pointer;" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false">
                         <div class="panel-info" ng-class="{active: questionnaire.private == 0}">
                             <div class="panel-content" style="text-align:center">
                                 <span style="font-size:30px;" class="fa fa-users"></span>
@@ -121,9 +85,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-12" ng-class="{invisible: !anyPrivate}">
-                    <p style="color:#d9534f;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.CANNOT_BE_PUBLIC'|translate}}</p>
                 </div>
             </div>
         </div>
@@ -134,38 +95,8 @@
                     <strong>Questions</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionGroupSection.open, 'glyphicon-chevron-right': !questionGroupSection.open}"></i>
                 </div>
             </uib-accordion-heading>
-            <div class="row" ng-hide="questionnaire.readOnly || questionnaire.final">
-                <div class="panel-container" style="margin:20px;">
-                    <h4 style="text-align:left;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.EDIT_QUESTIONS_LIST'|translate}} </h4>
-                    <div class="panel-info">
-                        <table style="width:100%;">
-                            <tr style="font-size:16px;">
-                                <td>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.ORDER'|translate}}</td>
-                                <td>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.QUESTION'|translate}}</td>
-                                <td>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.REQUIRED_OPTIONAL'|translate}}</td>
-                            </tr>
-                            <tr>
-                            </tr>
-                            <tr ng-repeat="question in questionnaire.questions">
-                                <td>
-                                    <label><input type="number" min="1" ng-model="question.order" ng-change="setChangesMade();orderPreview();" ng-disabled="questionnaire.readOnly || questionnaire.final"></label>
-                                </td>
-                                <td>
-                                    {{question.questionDisplay}}
-                                </td>
-                                <td>
-                                    <select name="groupOptional" ng-model="question.optional" ng-change="setChangesMade()" ng-init="question.optional" required ng-disabled="questionnaire.readOnly || questionnaire.final">
-                                        <option value="0">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.REQUIRED'|translate}}</option>
-                                        <option value="1">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.OPTIONAL'|translate}}</option>
-                                    </select>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-            </div>
             <div class="row">
-                <h4 style="text-align:left; margin-left:20px" ng-hide="questionnaire.readOnly || questionnaire.final" >{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.EDIT_QUESTIONS_SELECTION'|translate}} </h4>
+                <h4 style="text-align:left; margin-left:20px" >{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.EDIT_QUESTIONS_SELECTION'|translate}} </h4>
                 <!-- Selected groups: change position -->
                 <div class="col-md-12" ng-show="newgroups.length" >
                     <div class="panel-container" style="margin:10px;">
@@ -204,25 +135,13 @@
                     </div>
                 </div>
                 <div class="col-md-12">
-                    <!-- question group table -->
-                    <div class="col-md-8" ng-hide="questionnaire.readOnly || questionnaire.final">
-                        <div class="panel-container" style="text-align:left;">
-                            <div class="panel-info">
-                                <div class="panel-input">
-                                    <div id="data-table">
-                                        <div class="gridStyle" ui-grid="gridGroups" ui-grid-resize-columns ui-grid-selection style="height:75vh"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <!-- Preview -->
-                    <div ng-class="questionnaire.readOnly || questionnaire.final ? 'col-lg-12' : 'col-md-4'" style="text-align:right">
+                    <div class="col-lg-12" style="text-align:right">
                         <div style="height:10px; border-bottom:1px solid #6f5499; text-align:center; margin-bottom:10px;">
                             <span style="background-color: #fff; padding: 0 10px; font-size:16px;">{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.QUESTIONS_PREVIEW'|translate}}</span>
                         </div>
                         <div class="previewContainer">
-                            <div ng-class="questionnaire.readOnly || questionnaire.final ? 'col-lg-6' : 'col-lg-12'">
+                            <div class="col-lg-6">
                                 <div class="previewContent">
                                     <h3>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_EDIT.ENGLISH'|translate}}</h3>
                                     <div ng-repeat="selectedGroupObj in questionnaire.questions">
@@ -252,7 +171,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div ng-class="questionnaire.readOnly || questionnaire.final ? 'col-lg-6' : 'col-lg-12'">
+                            <div class="col-lg-6">
                                 <div class="previewContent">
                                     <h3>Français</h3>
                                     <div ng-repeat="selectedGroupObj in questionnaire.questions">
