--- a/templates/diagnosis/diagnosis-translation.html
+++ b/templates/diagnosis/diagnosis-translation.html
@@ -22,7 +22,7 @@
                     <div class="row clearfix operations">
                         <div class="save-add col-xs-12 col-sm-6 col-md-8">
                             <!-- Add button -->
-                            <a style="margin-right:20px;" href="" ng-click="goToAddDiagnosisTranslation()" class="btn btn-md btn-outline item-button">
+                            <a style="margin-right:20px;" ng-if="writeAccess" href="" ng-click="goToAddDiagnosisTranslation()" class="btn btn-md btn-outline item-button">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-plus"></span>
                                 <span style="font-size: 20px;"><strong>{{'DIAGNOSIS.LIST.ADD'|translate}}</strong></span>
                             </a>
