--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -267,20 +267,20 @@
             </div>
 
             <!-- SECTION: Patient registration -->
-            <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-                <div class="panel-container animated"
-                     ng-class="{pulse: hoverPatRegMenu, active: currentPage == 'patients-register'}"
-                     ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;"
-                     ng-click="goToPatientRegistration()">
-                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients-register'}">
-                        <div class="panel-content">
-                            <span style="font-size: 21px; vertical-align:middle" class="fa fa-user-plus"
-                                  aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.PATIENT_REGISTRATION'|translate}}</strong></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">-->
+<!--                <div class="panel-container animated"-->
+<!--                     ng-class="{pulse: hoverPatRegMenu, active: currentPage == 'patients-register'}"-->
+<!--                     ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;"-->
+<!--                     ng-click="goToPatientRegistration()">-->
+<!--                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients-register'}">-->
+<!--                        <div class="panel-content">-->
+<!--                            <span style="font-size: 21px; vertical-align:middle" class="fa fa-user-plus"-->
+<!--                                  aria-hidden="true"></span>-->
+<!--                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.PATIENT_REGISTRATION'|translate}}</strong></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <!-- SECTION: Patient activities -->
             <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
