OPAL-385 - Dynamic linking nav and sub nav menus underway

--- a/templates/questionnaire/add.template.question.html
+++ b/templates/questionnaire/add.template.question.html
@@ -134,7 +134,7 @@
                                 <span class="glyphicon glyphicon-menu-right teflon"></span>
                                 <a ui-sref="questionnaire-menu">{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</a>
                                 <span class="glyphicon glyphicon-menu-right teflon"></span>
-                                <a ui-sref="questionnaire-question">{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.TITLE'|translate}}</a>
+                                <a ui-sref="questionnaire/question">{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.TITLE'|translate}}</a>
                                 <span class="glyphicon glyphicon-menu-right teflon"></span>
                                 <strong>{{'QUESTIONNAIRE_MODULE.TEMPLATE_QUESTION_ADD.TITLE'|translate}}</strong>
                             </span>
