--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -176,7 +176,7 @@
                             <span class="glyphicon glyphicon-menu-right teflon"></span>
                             <a ui-sref="questionnaire-menu">{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</a>
                             <span class="glyphicon glyphicon-menu-right teflon"></span>
-                            <a ui-sref="questionnaire-question">{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.TITLE'|translate}}</a>
+                            <a ui-sref="questionnaire/question">{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.TITLE'|translate}}</a>
                             <span class="glyphicon glyphicon-menu-right teflon"></span>
                             <strong>{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.TITLE'|translate}}</strong>
                         </div>
