--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <!-- Load side menu -->
                 <div id="side-panel-scrollbar" class="col-lg-2">
-                    <div ng-include="'templates/side-panel-menu.html'"></div>
+                    <div ng-include="'templates/patient/menu-side.html'"></div>
                 </div>
                 <!-- Right side detail view -->
                 <div class="col-lg-10 animated fadeIn">
@@ -16,8 +16,7 @@
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-4 title-breadcrumbs">
-                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span
-                                    class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'PATIENTS.LIST.TITLE'|translate}}</strong></span>
+                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'PATIENTS.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
 
